--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -13,7 +14,8 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "pdfkit": "^0.17.1",
+    "rss-parser": "^3.13.0"
   }
 }
-
